[gd_scene load_steps=7 format=3 uid="uid://c0f3ymh478ctb"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_l6n6t"]
[ext_resource type="Texture2D" uid="uid://b6t2dwxtie3v5" path="res://Sprites/cerrar.png" id="2_516br"]
[ext_resource type="PackedScene" uid="uid://drfnqsugnf5r1" path="res://Scenes/parallax_background.tscn" id="2_kigk6"]
[ext_resource type="Texture2D" uid="uid://xgv62ovyoog7" path="res://Sprites/cerrarSesion.png" id="3_1pi6c"]
[ext_resource type="PackedScene" uid="uid://bgsbfhlb20c7h" path="res://Scenes/parallax_background_pieces.tscn" id="3_ikhir"]
[ext_resource type="Texture2D" uid="uid://bodv65atxm0i2" path="res://Sprites/nombreGame.png" id="6_rllcq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6n6t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2

[node name="Perfil" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "User"

[node name="Separador" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1000, 50)
layout_mode = 2

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Play"

[node name="Close" type="Button" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 1823.0
offset_top = -7.0
offset_right = 3131.0
offset_bottom = 1301.0
scale = Vector2(0.08, 0.08)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
icon = ExtResource("2_516br")

[node name="Cerrar" type="Button" parent="."]
clip_contents = true
offset_left = 1726.0
offset_top = -4.0
offset_right = 2246.0
offset_bottom = 516.0
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"FlatButton"
icon = ExtResource("3_1pi6c")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_kigk6")]

[node name="ParallaxBackgroundPieces" parent="." instance=ExtResource("3_ikhir")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(889, 310)
texture = ExtResource("6_rllcq")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Perfil" to="." method="_on_perfil_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Cerrar" to="." method="_on_cerrar_pressed"]
